rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: rest-server
spec:
        replicas: 1
        selector:
                matchLabels:
                        app: sentiment
        template:
                metadata:
                        labels:
                                app: sentiment
                spec:
                        containers:
                        - name: rest-server
                          image: ihammes/rest-server:v1
                          imagePullPolicy: Always
