rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: flask-svc
spec:
        type: NodePort
        selector:
                app: sentiment
        ports:
        - protocol: TCP
          port: 9999
          targetPort: 5000
