rest/rest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
# ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
        - path: /*
# pathType: Prefix
          backend:
            serviceName: flask-svc
            servicePort: 9999
